# CONCIERGE

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  eval_thresholds.yaml
.github/workflows/: ci.yml  widget.yml
admin/: Dockerfile  app.py  pyproject.toml
admin/lib/: __init__.py  api_client.py  sidebar.py
admin/pages/: 1_widgets.py  2_cms.py  3_guardrails.py  4_leads.py  5_debug.py  6_manager_tenants.py  7_manager_costs.py  escalations.py
artifacts/classifier/llm_baseline/: classification_report.json  confusion_matrix.csv  metrics.json  predictions.jsonl
artifacts/classifier/llm_baseline_fewshot/: classification_report.json  confusion_matrix.csv  metrics.json  predictions.jsonl
artifacts/classifier/llm_baseline_strict/: classification_report.json  confusion_matrix.csv  metrics.json  predictions.jsonl
artifacts/classifier/llm_baseline_strict_smoke/: classification_report.json  confusion_matrix.csv  metrics.json  predictions.jsonl
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  lifespan.py  logging_setup.py  main.py  tracing.py
backend/app/auth/: roles.py  service_token.py  users.py  widget_token.py
backend/app/core/: errors.py
backend/app/models/: __init__.py  agent_config.py  audit_log.py  base.py  chunk.py  cms.py  escalation.py  lead.py  tenant.py  tenant_costs.py  user.py  widget.py
backend/app/repositories/: agent_config_repo.py  audit_log_repo.py  base.py  chunk_repo.py  cms_page_repo.py  escalation_repo.py  lead_repo.py  tenant_costs_repo.py  tenant_repo.py  user_repo.py  widget_repo.py
backend/app/routes/: auth.py  chat.py  cms.py  health.py  manager.py  tenant_admin.py  widget.py
backend/app/schemas/: lead.py  tenant.py  user.py  widget.py
backend/app/services/: agent.py  classifier_client.py  cost_meter.py  embeddings_client.py  guardrails_client.py  llm_client.py  rag.py  rate_limiter.py  redaction.py  router.py  session_memory.py  test_redaction.py
backend/app/tenancy/: audit.py  manager.py  repository.py  rls.py
backend/app/tools/: capture_lead.py  escalate.py  rag_search.py
backend/evals/agent_tool_selection/: golden.jsonl  run.py
backend/evals/classifier/: golden.jsonl  run.py
backend/evals/rag/: golden.jsonl  index_pages.py  run.py  seed.py
backend/evals/redaction/: cases.jsonl  http_run.py  run.py  test_redaction_runner.py
backend/evals/redteam/: cross_tenant.jsonl  http_run.py  injection.jsonl  run.py  test_redteam_runner.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_leads_updated_at.py
backend/scripts/: erase_tenant.py  seed_dev_data.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_rls.py  test_widget_token_exchange.py
demo/: README.md
docs/: DECISIONS.md  DESIGN.md  EVALS.md  RUNBOOK.md  SECURITY.md
guardrails/: Dockerfile  pyproject.toml  rails.py  redaction.py  requirements.txt  server.py  tenant_rails.py
guardrails/config/platform/: config.yml  prompts.yml  rails.co
guardrails/config/tenant_template/: config.yml  rails.co
guardrails/tests/: test_server.py  test_tenant_rails.py
modelserver/: Dockerfile  app.py  model_card.yaml  pyproject.toml
modelserver/artifacts/: classical_model.joblib  dl_hashing_vectorizer.joblib  dl_model.onnx  dl_model.onnx.data  label_mapping.json  threshold.json
modelserver/artifacts/eval/classical/: classification_report.json  confusion_matrix.csv  metrics.json  product_final_golden_classification_report.json  product_final_golden_confusion_matrix.csv  product_threshold_set_classification_report.json  product_threshold_set_confusion_matrix.csv  validation_classification_report.json  validation_confusion_matrix.csv
modelserver/artifacts/eval/dl_onnx/: classification_report.json  confusion_matrix.csv  metrics.json  product_final_golden_classification_report.json  validation_classification_report.json
modelserver/tests/: test_app.py
prompts/: router_classifier.md  system_agent.md  tenant_persona_template.md
requirements/: evals.txt
scripts/evals/: run_llm_baseline_anthropic.py
specs/owner-a-platform/: SPEC.md  plan.md  tasks.md
specs/owner-b-agent/: SPEC.md  plan.md  tasks.md
specs/owner-c-models/: SPEC.md  plan.md  tasks.md
specs/owner-d-widget/: SPEC.md  plan.md  tasks.md
specs/shared/contracts/: INTERFACES.md
vault/: init.sh
vault/policies/: api.hcl
widget/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
widget/public/: allowed.html  florist.html  loader.js
widget/src/: Widget.tsx  api.ts  main.tsx  theme.ts
