[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge-admin"
version = "0.1.0"
requires-python = ">=3.11"

# Minimal dependency surface: Streamlit + httpx is enough for an internal UI
# that talks to one backend over JSON. No CSS frameworks, no auth libraries —
# all auth and identity live in the backend.
dependencies = [
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["lib*", "pages*"]
