# Owner A — backend/pyproject.toml
# Manages all backend Python dependencies via uv.
# Other owners submit PRs to add deps; Owner A reviews and merges.

[project]
name = "concierge-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",      # required for form data / file uploads

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",   # async ORM
    "asyncpg>=0.29.0",              # async Postgres driver
    "alembic>=1.13.0",              # schema migrations (Owner A only runs these)
    "pgvector>=0.2.5",              # vector column type for SQLAlchemy

    # ── Config ────────────────────────────────────────────────────────────────
    "pydantic-settings>=2.2.0",     # typed env var config with extra="forbid"
    "pydantic[email]>=2.0.0",       # EmailStr validation for tenant provisioning

    # ── Auth ──────────────────────────────────────────────────────────────────
    "fastapi-users[sqlalchemy]>=13.0.0",  # login, register, JWT issuance
    "PyJWT>=2.8.0",                       # widget token sign/verify
    "passlib[bcrypt]>=1.7.4",             # password hashing (used by fastapi-users)

    # ── Redis ─────────────────────────────────────────────────────────────────
    "redis>=5.0.0",                 # async client for session memory + rate limiting

    # ── Secrets ───────────────────────────────────────────────────────────────
    "hvac>=2.1.0",                  # HashiCorp Vault client

    # ── HTTP client ───────────────────────────────────────────────────────────
    "httpx>=0.27.0",                # calls modelserver and guardrails

    # ── LLM ───────────────────────────────────────────────────────────────────
    "anthropic>=0.40.0",            # Claude API — used by llm_client.py (Owner B)

    # ── Logging ───────────────────────────────────────────────────────────────
    "structlog>=24.1.0",            # structured JSON logs

    # ── Tracing ───────────────────────────────────────────────────────────────
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",  # sends traces to Jaeger
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",               # AsyncClient for tests
    "ruff>=0.4.0",                 # linting + formatting
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]          # pycodestyle errors, pyflakes, isort

[tool.pytest.ini_options]
asyncio_mode = "auto"              # all async test functions run without @pytest.mark.asyncio
