[project]
name = "concierge-modelserver"
version = "0.1.0"
description = "Owner C modelserver for Concierge"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0",
  "numpy>=1.26,<3.0",
  "onnxruntime>=1.18,<2.0",
  "pyyaml>=6.0,<7.0",
  "hvac>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
